--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(Server C CXX)
 
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 file(GLOB SERVER_HEADERS
@@ -17,13 +20,13 @@ file(GLOB SERVER_SOURCE
 
 add_library(${PROJECT_NAME} SHARED ${SERVER_HEADERS} ${SERVER_SOURCE})
 
-target_compile_definitions(${PROJECT_NAME} PUBLIC ${JsonFactory_DEFINITIONS})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${JsonFactory_DEFINITIONS} ${CONAN_DEFINITIONS})
 
-target_link_directories(${PROJECT_NAME} PUBLIC ${JsonFactory_INCLUDE_DIRS})
+target_link_directories(${PROJECT_NAME} PUBLIC ${JsonFactory_INCLUDE_DIRS} ${CONAN_INCLUDE_DIRS})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${JsonFactory_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${JsonFactory_INCLUDE_DIRS} ${CONAN_INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC JsonFactory)
+target_link_libraries(${PROJECT_NAME} PUBLIC JsonFactory ${CONAN_LIBS})
 
 set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
         CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE
